--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: "Viral Jogani"
 email: viraljogani@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
+description: >
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://virjog.github.io" # the base hostname & protocol for your site
 twitter_username: virjog
