--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
 title: "Viral Jogani"
 email: viraljogani@gmail.com
-description: >
-baseurl: "/virjog.github.io" # the subpath of your site, e.g. /blog/
+description: > # this means to ignore newlines until "baseurl:"
+baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://virjog.github.io" # the base hostname & protocol for your site
 twitter_username: virjog
 github_username:  virjog
