Completed project descriptions and added UI for mobile

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,17 +1,47 @@
 - name: Captura
   id: captura
-  link: /captura/
+  link: https://github.com/virjog/Android-Captura
   image: http://placehold.it/250x180
-  description: Designed and developed an Android app to help users learn a language by capturing photos of objects, using image recognition to generate keywords, and translating the words the user wants to learn.
+  description: Designed and developed an Android app to help users learn a language by capturing photos of objects, using image recognition to generate keywords, and translating the words.
 
 - name: YouTube Live
   id: youtubelive
-  link: /youtube-live/
+  link: https://medium.com/@virjog/youtube-live-for-android-by-viral-jogani-cb152248ae5b
   image: http://placehold.it/250x180
   description: Designed a concept Android app for Google if they decided to enter the mobile live streaming space. 
+
+- name: WalkThru
+  id: WalkThru
+  link: /walkthru/
+  image: http://placehold.it/250x180
+  description: Designed the Chrome extension, several landing pages, and the branding for the startup.
 
 - name: Socialblood
   id: socialblood
   link: /socialblood/
   image: http://placehold.it/250x180
-  description: Project description will go here.
+  description: Designed the user interface and user experience of the iOS app for Socialblood, a tool to connect with blood donors. 
+
+- name: Tennis Buddy
+  id: tennisbuddy
+  link: /tennis-buddy/
+  image: http://placehold.it/250x180
+  description: Designed the user interface and user experience of the Android app for Tennis Buddy, an app find nearby tennis partners.
+
+- name: hackHub
+  id: hackhub
+  link: /hackhub/
+  image: http://placehold.it/250x180
+  description: Designed and built the front-end for an information portal to help hackers communicate with hackathon organizers. Won "Best Design Hack" at hackNY 2015.
+
+- name: FindMyHealth
+  id: findmyhealth
+  link: /findmyhealth/
+  image: http://placehold.it/250x180
+  description: Designed the user interface and user experience for the iOS app, which helps users find hospitals with the least wait times for non-life threatening emergencies. Won "Best Social Innovation Hack" at PennApps XII.
+
+- name: Rush
+  id: rush
+  link: /rush/
+  image: http://placehold.it/250x180
+  description: Designed an Android app for Rutgers students to view the campus bus routes and schedule. 
