--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -31,7 +31,7 @@
 - name: hackHub
   id: hackhub
   link: /hackhub/
-  image: /assets/images/hackhub.png
+  image: /assets/images/hackHub.png
   description: Designed and built the front-end for an information portal to help hackers communicate with hackathon organizers. Won "Best Design Hack" at hackNY 2015.
 
 - name: FindMyHealth
